css: fixed overflow and made some more tweaks

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,33 @@
 /* index.html */
+html {
+    overflow-x: hidden;
+}
+body {
+    background-color: black;
+}
+body p {
+    color: white;
+}
 .library {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    row-gap: 6rem;
+    row-gap: 3rem;
     justify-items: center;
+    margin-top: 6rem;
+}
+.search {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    height: 4rem;
+    align-content: center;
+    box-shadow: 0px 2px 5px white;
+}
+.search input {
+    width: 20rem;
+    height: 2.5rem;
+    border-radius: 2rem;
+    border-color: grey;
 }
 .loader {
     position: fixed;
@@ -30,7 +54,7 @@
 .title a {
     text-align: center;
     text-decoration: none;
-    color: black;
+    color: white;
     cursor: pointer;
     font-weight: bold;
     font-family:Arial, Helvetica, sans-serif;
@@ -48,6 +72,7 @@
     text-align: center;
     display: block;
     margin: auto;
+    font-size: 14px;
 }
 .now-playing {
     display: grid;
